--- a/edge/config-server/src/main/resources/application.properties
+++ b/edge/config-server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#current service name to be used by the eureka server
+spring.application.name = config-server
 
+#default port where the service will be started
+server.port = 8888
+ 
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
