--- a/edge/config-server/src/main/resources/bootstrap.properties
+++ b/edge/config-server/src/main/resources/bootstrap.properties
@@ -1,8 +1,5 @@
-#Server port
-server.port = 8888
- 
 #Git repo location
-#spring.cloud.config.server.git.uri = ...
+spring.cloud.config.server.git.uri=https://github.com/RoyDePrins/config-server-repo
  
 #Verify any repository issue in service startup
 spring.cloud.config.server.git.cloneOnStart=true
