added properties in .properties file instead of .yml file for consistency

--- a/edge/eureka-server/src/main/resources/application.properties
+++ b/edge/eureka-server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=eureka-server
 
+#Default port where the application will be started
+server.port= ${PORT:8761}
+
+#telling the server not to register himself in the service registry
+eureka.client.registerWithEureka= false
+eureka.client.fetchRegistry= false
+
+#wait time for subsequent sync
+eureka.server.waitTimeInMsWhenSyncEmpty= 0
