By default hide all services in zuul, except the explicitly added ones

--- a/edge/zuul-proxy/src/main/resources/application.properties
+++ b/edge/zuul-proxy/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#By default hide all services. 
+#The ones we want exposed will be defined underneath as zuul routes
+zuul.ignored-services=*
+
 #All the Zuul routes. Add new ones when necessary
 #...
 #TODO is only as example, maybe best to delete it
