Added test ms and added its route to Zuul

--- a/edge/zuul-proxy/src/main/resources/application.properties
+++ b/edge/zuul-proxy/src/main/resources/application.properties
@@ -3,9 +3,7 @@
 zuul.ignored-services=*
 
 #All the Zuul routes. Add new ones when necessary
-#...
-#TODO is only as example, maybe best to delete it
-zuul.routes.eureka-server.url=http://localhost:8761/
+zuul.routes.test.url=http://localhost:8889/
  
 spring.application.name=zuul-proxy
 
