--- a/Frontend/Netflix/angular.json
+++ b/Frontend/Netflix/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Bike-ui": {
+    "Netflix": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Bike-ui",
+            "outputPath": "dist/Netflix",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Bike-ui:build"
+            "browserTarget": "Netflix:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Bike-ui:build:production"
+              "browserTarget": "Netflix:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Bike-ui:build"
+            "browserTarget": "Netflix:build"
           }
         },
         "test": {
@@ -110,15 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Bike-ui:serve"
+            "devServerTarget": "Netflix:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Bike-ui:serve:production"
+              "devServerTarget": "Netflix:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "Bike-ui"
+    }
+  },
+  "defaultProject": "Netflix",
+  "cli": {
+    "analytics": false
+  }
 }
