--- a/Frontend/Netflix/package.json
+++ b/Frontend/Netflix/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bike-ui",
+  "name": "netflix",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
