added user-service ms

--- a/edge/zuul-proxy/src/main/resources/application.properties
+++ b/edge/zuul-proxy/src/main/resources/application.properties
@@ -4,6 +4,7 @@ zuul.ignored-services=*
 
 #All the Zuul routes. Add new ones when necessary
 zuul.routes.test.url=http://localhost:8889/
+zuul.routes.user-service.url=http://localhost:8887/
  
 spring.application.name=zuul-proxy
 
