--- a/movie/movie-data-collector/src/main/resources/application.properties
+++ b/movie/movie-data-collector/src/main/resources/application.properties
@@ -1,3 +1,20 @@
 server.port = 8901
-
 spring.application.name = movie-data-collector
+
+spring.jpa.database-platform = org.hibernate.dialect.SQLiteDialect
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+
+#defines whether are not hibernate should create the model for us:
+spring.jpa.hibernate.ddl-auto = none  
+#spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:sqlite:movie.db
+
+spring.datasource.username=
+spring.datasource.password=   
+
+spring.datasource.driver-class-name=org.sqlite.JDBC
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
