--- a/Frontend/Netflix/package.json
+++ b/Frontend/Netflix/package.json
@@ -2,6 +2,7 @@
   "name": "netflix",
   "version": "0.0.0",
   "scripts": {
+  	"preinstall": "npm link @angular/cli ",
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
