Integrated zuul & eurkea

--- a/edge/zuul-proxy/src/main/resources/application.properties
+++ b/edge/zuul-proxy/src/main/resources/application.properties
@@ -1,12 +1,34 @@
+spring.application.name=zuul-proxy
+#Will start the gateway server 8080
+server.port=8080
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+#eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=true
+
+
 #By default hide all services. 
 #The ones we want exposed will be defined underneath as zuul routes
 zuul.ignored-services=*
 
 #All the Zuul routes. Add new ones when necessary
-zuul.routes.test.url=http://localhost:8889/
-zuul.routes.user-service.url=http://localhost:8887/
- 
-spring.application.name=zuul-proxy
+#zuul.routes.test.url=http://localhost:8889/
 
-#Will start the gateway server 8080
-server.port=8080
+zuul.routes.user-service.path= /user-service/**
+zuul.routes.user-service.service-id= user-service
+ #zuul.routes.user-service.url=http://localhost:8887/
+
+zuul.routes.test.path= /test/**
+zuul.routes.test.service-id= test
+
+zuul.routes.movie.path= /movie/**
+zuul.routes.movie.service-id= movie-data-collector
+
+zuul.routes.config.path= /config/**
+zuul.routes.config.service-id= CONFIG-SERVER
+
+#URL's zetten: avoid
+
+
+
+ribbon.ReadTimeout: 10000
+
