--- a/edge/zuul-proxy/src/main/resources/application.properties
+++ b/edge/zuul-proxy/src/main/resources/application.properties
@@ -10,8 +10,7 @@ eureka.client.fetchRegistry=true
 #The ones we want exposed will be defined underneath as zuul routes
 zuul.ignored-services=*
 
-#All the Zuul routes. Add new ones when necessary
-#zuul.routes.test.url=http://localhost:8889/
+#All the Zuul routes. Add new ones when necessary #Use service-ID (eureka) instead of Direct utls
 
 zuul.routes.user-service.path= /user-service/**
 zuul.routes.user-service.service-id= user-service
@@ -24,9 +23,11 @@ zuul.routes.movie.path= /movie/**
 zuul.routes.movie.service-id= movie-data-collector
 
 zuul.routes.config.path= /config/**
-zuul.routes.config.service-id= CONFIG-SERVER
+zuul.routes.config.service-id= config-server
 
-#URL's zetten: avoid
+
+zuul.routes.security.path= /sec/**
+zuul.routes.security.service-id= security-server
 
 
 
