--- a/edge/SecurityServer/pom.xml
+++ b/edge/SecurityServer/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.netflixProject</groupId>
-	<artifactId>SecurityTest-Github</artifactId>
+	<artifactId>SecurityServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SecurityTest-Github</name>
+	<name>SecurityServer</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -21,9 +21,17 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -42,7 +50,6 @@
 			</exclusions>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
@@ -58,7 +65,6 @@
 			<artifactId>webjars-locator-core</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
@@ -69,6 +75,9 @@
 			<artifactId>js-cookie</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+
+
+
 
 
 
