--- a/user/ratingService/src/main/resources/application.properties
+++ b/user/ratingService/src/main/resources/application.properties
@@ -6,3 +6,13 @@ server.port = 8886
  
 eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.preferIpAddress=true
+
+#configuration for the database
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:sqlite:rating.db
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.sqlite.JDBC
