using Opencsv as processing unit for the testset: start

--- a/movie/TrainingService/pom.xml
+++ b/movie/TrainingService/pom.xml
@@ -44,6 +44,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>com.NetflixProject</groupId>
+			<artifactId>UserService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.2</version>
+		</dependency>
+		
+		
+
+	
 	</dependencies>
 
 	<dependencyManagement>
