Started Controller of that Csv backend

--- a/edge/SecurityServer/src/main/resources/application.yml
+++ b/edge/SecurityServer/src/main/resources/application.yml
@@ -38,5 +38,8 @@ zuul:
     user-service:
       path: /user-service/**
       service-id: user-service
-
+    
+    explore:
+      path: /explore/**
+      service-id: trainingservice
 #
