--- a/movie/TrainingService/src/main/resources/application.properties
+++ b/movie/TrainingService/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 server.port=8904
 spring.application.name= TrainingService
+
+spring.datasource.url=jdbc:mysql://localhost:3306/myDb
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.database-platform=org.hibernate.dialect.mysqldialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
