--- a/edge/SecurityServer/src/main/resources/application.yml
+++ b/edge/SecurityServer/src/main/resources/application.yml
@@ -42,4 +42,8 @@ zuul:
     explore:
       path: /explore/**
       service-id: trainingservice
+      
+    db:
+      path: /db/**
+      service-id: trainingservice
 #
