--- a/Frontend/Netflix/package.json
+++ b/Frontend/Netflix/package.json
@@ -9,17 +9,17 @@
 		"lint": "ng lint",
 		"e2e": "ng e2e",
 		"heroku-postbuild": "ng build --prod"
-		
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~10.1.3",
-		"@angular/cli": "~10.1.3",
+		"@angular/animations": "^10.1.5",
+		"@angular/cdk": "^10.2.4",
 		"@angular/common": "~10.1.3",
 		"@angular/compiler": "~10.1.3",
 		"@angular/compiler-cli": "~10.1.3",
 		"@angular/core": "~10.1.3",
 		"@angular/forms": "~10.1.3",
+		"@angular/material": "^10.2.4",
 		"@angular/platform-browser": "~10.1.3",
 		"@angular/platform-browser-dynamic": "~10.1.3",
 		"@angular/router": "~10.1.3",
@@ -27,12 +27,11 @@
 		"path": "^0.12.7",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.0.0",
-		"typescript": "~4.0.2",
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~0.1001.3",
-		"@angular/cli": "~10.1.3",
+		"@angular/cli": "^10.1.6",
 		"@angular/compiler-cli": "~10.1.3",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
@@ -48,8 +47,8 @@
 		"karma-jasmine-html-reporter": "^1.5.0",
 		"protractor": "~7.0.0",
 		"ts-node": "~8.3.0",
-		"typescript": "~4.0.2",
-		"tslint": "~6.1.0"
+		"tslint": "~6.1.0",
+		"typescript": "^4.0.3"
 	},
 	"engines": {
 		"node": "10.19.0",
