tried to point config server to new location of the config files but doesn't work yet...

--- a/edge/config-server/src/main/resources/bootstrap.properties
+++ b/edge/config-server/src/main/resources/bootstrap.properties
@@ -1,5 +1,10 @@
 #Git repo location
-spring.cloud.config.server.git.uri=https://github.com/RoyDePrins/config-server-repo
+spring.cloud.config.server.git.uri=https://github.com/RoyDePrins/config-server-repo.git
+
+#spring.cloud.config.server.git.uri=https://odyssey.devoteam.be/netflix/config-server-files.git
+#spring.cloud.config.server.git.username=
+#spring.cloud.config.server.git.password=
+ 
  
 #Verify any repository issue in service startup
 spring.cloud.config.server.git.cloneOnStart=true
