Worked on img in movieExplorer

--- a/movie/TrainingService/src/main/resources/application.properties
+++ b/movie/TrainingService/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+logging.level.root=OFF
