Streamservice: created microservice, uploaded testvideo, coupled with fe and implemented fe

--- a/edge/SecurityServer/src/main/resources/application.yml
+++ b/edge/SecurityServer/src/main/resources/application.yml
@@ -52,4 +52,8 @@ zuul:
     db:
       path: /db/**
       service-id: trainingservice
+      
+    stream:  
+      path: /stream/**
+      service-id: streamservice
 #
