--- a/movie/movie-data-collector/src/main/resources/application.properties
+++ b/movie/movie-data-collector/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8901
-spring.application.name = movie-data-collector
+spring.application.name = Scrape-Fallback-Service
 
 spring.jpa.database-platform = org.hibernate.dialect.SQLiteDialect
 #spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
